--- a/index.html
+++ b/index.html
@@ -15,78 +15,66 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-black">Studio</span></a
-        >
-        <ul class="site-nav list">
+    <header class="page-header">
+      <div class="container header-nav">
+        <a href="./index.html" class="logo link">Web<span class="logo-black">Studio</span></a>
+        <nav>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="site-link link current">Студія</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="site-link link">Портфоліо</a>
+            </li>
+            <li><a href="#" class="site-link link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="adress-nav list">
           <li>
-            <a href="./index.html" class="site-link link current">Студія</a>
+            <a href="mailto:info@devstudio.com" class="adress-link link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="site-link link">Портфоліо</a>
+            <a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a>
           </li>
-          <li><a href="./index.html" class="site-link link">Контакти</a></li>
         </ul>
-      </nav>
-      <ul class="adress-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="adress-link link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="adress-link link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- Мейн -->
-    <main>
+    <main class="main">
       <!-- Герой -->
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="button">Замовити послугу</button>
       </section>
+      <!-- <div class="container"> -->
       <!-- Особливості -->
-      <section class="section">
-        <h2 class="section-title">Наші особливості</h2>
-        <ul class="feature-list list">
-          <li>
-            <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
+      <div class="center">
+        <section class="section feature-section container">
+          <h2 class="section-title hidden">Наші особливості</h2>
+          <ul class="feature-list list">
+            <li>
+              <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li>
+              <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li>
+              <h3 class="feature-title">ПЛАНУВАННЯ</h3>
+              <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+              <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+          </ul>
+        </section>
+      </div>
       <!-- Чим ми займаємося -->
-      <section class="section">
+      <section class="section feature-section container">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
+        <ul class="work-list list">
           <li>
             <img
               src="./images/img_1.jpg"
@@ -95,91 +83,66 @@
             />
           </li>
           <li>
-            <img
-              src="./images/img_2.jpg"
-              alt="Телефон в руках і ноутбук на столі"
-              width="370"
-            />
+            <img src="./images/img_2.jpg" alt="Телефон в руках і ноутбук на столі" width="370" />
           </li>
           <li>
-            <img
-              src="./images/img_3.jpg"
-              alt="Планшет з колажом вибору кольору"
-              width="370"
-            />
+            <img src="./images/img_3.jpg" alt="Планшет з колажом вибору кольору" width="370" />
           </li>
         </ul>
       </section>
       <!-- Команда -->
-      <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="user-list list">
-          <li>
-            <img
-              src="./images/avatar_1.jpg"
-              alt="Фото участника команди"
-              width="270"
-            />
-            <h3 class="user-title">Ігор Дем'яненко</h3>
-            <p class="user-desc">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/avatar_2.jpg"
-              alt="Фото участника команди"
-              width="270"
-            />
-            <h3 class="user-title">Ольга Рєпіна</h3>
-            <p class="user-desc">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/avatar_3.jpg"
-              alt="Фото участника команди"
-              width="270"
-            />
-            <h3 class="user-title">Микола Тарасов</h3>
-            <p class="user-desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/avatar_4.jpg"
-              alt="Фото участника команди"
-              width="270"
-            />
-            <h3 class="user-title">Михайло Єрмаков</h3>
-            <p class="user-desc">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+      <div class="comand-section">
+        <section class="section container feature-section">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="user-list list">
+            <li>
+              <img src="./images/avatar_1.jpg" alt="Фото участника команди" width="270" />
+              <h3 class="user-title">Ігор Дем'яненко</h3>
+              <p class="user-desc">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/avatar_2.jpg" alt="Фото участника команди" width="270" />
+              <h3 class="user-title">Ольга Рєпіна</h3>
+              <p class="user-desc">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/avatar_3.jpg" alt="Фото участника команди" width="270" />
+              <h3 class="user-title">Микола Тарасов</h3>
+              <p class="user-desc">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/avatar_4.jpg" alt="Фото участника команди" width="270" />
+              <h3 class="user-title">Михайло Єрмаков</h3>
+              <p class="user-desc">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <!-- </div> -->
     </main>
     <!-- Футлер -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-white">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a
-              href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000"
-              target="_blank"
-              class="address-map link"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contact link"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo link">Web<span class="logo-white">Studio</span></a>
+        <address class="address">
+          <ul class="list address-list">
+            <li>
+              <a
+                href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000"
+                target="_blank"
+                class="address-map link"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contact link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
