--- a/portfolio.html
+++ b/portfolio.html
@@ -15,159 +15,131 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-black">Studio</span></a
-        >
-        <ul class="site-nav list">
+    <header class="page-header">
+      <div class="container header-nav">
+        <a href="./index.html" class="logo link">Web<span class="logo-black">Studio</span></a>
+        <nav>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="site-link link">Студія</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="site-link link current">Портфоліо</a>
+            </li>
+            <li><a href="#" class="site-link link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="adress-nav list">
           <li>
-            <a href="./index.html" class="site-link link">Студія</a>
+            <a href="mailto:info@devstudio.com" class="adress-link link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="site-link link current"
-              >Портфоліо</a
-            >
+            <a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a>
           </li>
-          <li><a href="./index.html" class="site-link link">Контакти</a></li>
         </ul>
-      </nav>
-      <ul class="adress-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="adress-link link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="adress-link link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- Мейн -->
     <main>
-      <section class="section">
-        <h1>Приклади робіт</h1>
-        <div class="filters">
-          <button type="button" class="filters-button">Усі</button>
-          <button type="button" class="filters-button">Веб-сайти</button>
-          <button type="button" class="filters-button">Додатки</button>
-          <button type="button" class="filters-button">Дизайн</button>
-          <button type="button" class="filters-button">Маркетинг</button>
-        </div>
+      <section class="section container filters-section">
+        <h1 class="hidden">Приклади робіт</h1>
+        <ul class="filters list">
+          <li><button type="button" class="filters-button">Усі</button></li>
+          <li><button type="button" class="filters-button">Веб-сайти</button></li>
+          <li><button type="button" class="filters-button">Додатки</button></li>
+          <li><button type="button" class="filters-button">Дизайн</button></li>
+          <li><button type="button" class="filters-button">Маркетинг</button></li>
+        </ul>
         <ul class="projects list">
           <li>
-            <img
-              src="./images/pr_1.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Технокряк</h2>
-            <p class="projects-desc">Веб-сайт</p>
+            <img src="./images/pr_1.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Технокряк</h2>
+              <p class="projects-desc">Веб-сайт</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_2.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-            <p class="projects-desc">Дизайн</p>
+            <img src="./images/pr_2.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+              <p class="projects-desc">Дизайн</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_3.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Ресторан Seafood</h2>
-            <p class="projects-desc">Додаток</p>
+            <img src="./images/pr_3.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Ресторан Seafood</h2>
+              <p class="projects-desc">Додаток</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_4.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Проєкт Prime</h2>
-            <p class="projects-desc">Маркетинг</p>
+            <img src="./images/pr_4.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Проєкт Prime</h2>
+              <p class="projects-desc">Маркетинг</p></div>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_5.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Проєкт Boxes</h2>
-            <p class="projects-desc">Додаток</p>
+            <img src="./images/pr_5.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Проєкт Boxes</h2>
+              <p class="projects-desc">Додаток</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_6.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Inspiration has no Borders</h2>
-            <p class="projects-desc">Веб-сайт</p>
+            <img src="./images/pr_6.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Inspiration has no Borders</h2>
+              <p class="projects-desc">Веб-сайт</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_7.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Видання Limited Edition</h2>
-            <p class="projects-desc">Дизайн</p>
+            <img src="./images/pr_7.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Видання Limited Edition</h2>
+              <p class="projects-desc">Дизайн</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_8.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Проєкт LAB</h2>
-            <p class="projects-desc">Маркетинг</p>
+            <img src="./images/pr_8.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Проєкт LAB</h2>
+              <p class="projects-desc">Маркетинг</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/pr_9.jpg"
-              alt="Приклад виповненої роботи"
-              width="370"
-            />
-            <h2 class="projects-title">Growing Business</h2>
-            <p class="projects-desc">Додаток</p>
+            <img src="./images/pr_9.jpg" alt="Приклад виповненої роботи" width="370" />
+            <div class="projects-border">
+              <h2 class="projects-title">Growing Business</h2>
+              <p class="projects-desc">Додаток</p>
+            </div>
           </li>
         </ul>
       </section>
     </main>
     <!-- Футлер -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-white">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a
-              href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000"
-              target="_blank"
-              class="address-map link"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contact link"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo link">Web<span class="logo-white">Studio</span></a>
+        <address class="address">
+          <ul class="list address-list">
+            <li>
+              <a
+                href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000"
+                target="_blank"
+                class="address-map link"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contact link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
