--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </section>
       <!-- Особливості -->
       <div class="center">
-        <section class="section feature-section container">
+        <section class="section container feature-section">
           <h2 class="section-title hidden">Наші особливості</h2>
           <ul class="feature-list list">
             <li>
@@ -71,7 +71,7 @@
         </section>
       </div>
       <!-- Чим ми займаємося -->
-      <section class="section feature-section container">
+      <section class="section container">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work-list list">
           <li>
