Додавання тіней. Виправлення
Скомпонував картки команди. Додав тіні. Виправив секцю цілей

--- a/index.html
+++ b/index.html
@@ -96,23 +96,31 @@
           <ul class="user-list list">
             <li>
               <img src="./images/avatar_1.jpg" alt="Фото участника команди" width="270" />
-              <h3 class="user-title">Ігор Дем'яненко</h3>
-              <p class="user-desc">Product Designer</p>
+              <div class="user-signature">
+                <h3 class="user-title">Ігор Дем'яненко</h3>
+                <p class="user-desc">Product Designer</p>
+              </div>
             </li>
             <li>
               <img src="./images/avatar_2.jpg" alt="Фото участника команди" width="270" />
-              <h3 class="user-title">Ольга Рєпіна</h3>
-              <p class="user-desc">Frontend Developer</p>
+              <div class="user-signature">
+                <h3 class="user-title">Ольга Рєпіна</h3>
+                <p class="user-desc">Frontend Developer</p>
+              </div>
             </li>
             <li>
               <img src="./images/avatar_3.jpg" alt="Фото участника команди" width="270" />
-              <h3 class="user-title">Микола Тарасов</h3>
-              <p class="user-desc">Marketing</p>
+              <div class="user-signature">
+                <h3 class="user-title">Микола Тарасов</h3>
+                <p class="user-desc">Marketing</p>
+              </div>
             </li>
             <li>
               <img src="./images/avatar_4.jpg" alt="Фото участника команди" width="270" />
-              <h3 class="user-title">Михайло Єрмаков</h3>
-              <p class="user-desc">UI Designer</p>
+              <div class="user-signature">
+                <h3 class="user-title">Михайло Єрмаков</h3>
+                <p class="user-desc">UI Designer</p>
+              </div>
             </li>
           </ul>
         </section>
