--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <button type="button" class="button">Замовити послугу</button>
       </section>
       <!-- Особливості -->
-      <div class="center">
-        <section class="section container feature-section">
+      <section class="section">
+        <div class="container">
           <h2 class="section-title hidden">Наші особливості</h2>
           <ul class="feature-list list">
             <li>
@@ -68,30 +68,32 @@
               <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
       <!-- Чим ми займаємося -->
-      <section class="section container">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="work-list list">
-          <li>
-            <img
-              src="./images/img_1.jpg"
-              alt="Робочий стіл з планшетом і клавіатурою"
-              width="370"
-            />
-          </li>
-          <li>
-            <img src="./images/img_2.jpg" alt="Телефон в руках і ноутбук на столі" width="370" />
-          </li>
-          <li>
-            <img src="./images/img_3.jpg" alt="Планшет з колажом вибору кольору" width="370" />
-          </li>
-        </ul>
+      <section class="section feature-section">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="work-list list">
+            <li>
+              <img
+                src="./images/img_1.jpg"
+                alt="Робочий стіл з планшетом і клавіатурою"
+                width="370"
+              />
+            </li>
+            <li>
+              <img src="./images/img_2.jpg" alt="Телефон в руках і ноутбук на столі" width="370" />
+            </li>
+            <li>
+              <img src="./images/img_3.jpg" alt="Планшет з колажом вибору кольору" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Команда -->
-      <div class="comand-section">
-        <section class="section container feature-section">
+      <section class="section feature-section comand-section">
+        <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="user-list list">
             <li>
@@ -123,9 +125,8 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
-      <!-- </div> -->
+        </div>
+      </section>
     </main>
     <!-- Футлер -->
     <footer class="footer">
