--- a/portfolio.html
+++ b/portfolio.html
@@ -41,80 +41,82 @@
     </header>
     <!-- Мейн -->
     <main>
-      <section class="section container filters-section">
-        <h1 class="hidden">Приклади робіт</h1>
-        <ul class="filters list">
-          <li><button type="button" class="filters-button">Усі</button></li>
-          <li><button type="button" class="filters-button">Веб-сайти</button></li>
-          <li><button type="button" class="filters-button">Додатки</button></li>
-          <li><button type="button" class="filters-button">Дизайн</button></li>
-          <li><button type="button" class="filters-button">Маркетинг</button></li>
-        </ul>
-        <ul class="projects list">
-          <li>
-            <img src="./images/pr_1.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Технокряк</h2>
-              <p class="projects-desc">Веб-сайт</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_2.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-              <p class="projects-desc">Дизайн</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_3.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Ресторан Seafood</h2>
-              <p class="projects-desc">Додаток</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_4.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Проєкт Prime</h2>
-              <p class="projects-desc">Маркетинг</p></div>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_5.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Проєкт Boxes</h2>
-              <p class="projects-desc">Додаток</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_6.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Inspiration has no Borders</h2>
-              <p class="projects-desc">Веб-сайт</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_7.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Видання Limited Edition</h2>
-              <p class="projects-desc">Дизайн</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_8.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Проєкт LAB</h2>
-              <p class="projects-desc">Маркетинг</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/pr_9.jpg" alt="Приклад виповненої роботи" width="370" />
-            <div class="projects-border">
-              <h2 class="projects-title">Growing Business</h2>
-              <p class="projects-desc">Додаток</p>
-            </div>
-          </li>
-        </ul>
+      <section class="section feature-section">
+        <div class="container">
+          <h1 class="hidden">Приклади робіт</h1>
+          <ul class="filters list">
+            <li><button type="button" class="filters-button">Усі</button></li>
+            <li><button type="button" class="filters-button">Веб-сайти</button></li>
+            <li><button type="button" class="filters-button">Додатки</button></li>
+            <li><button type="button" class="filters-button">Дизайн</button></li>
+            <li><button type="button" class="filters-button">Маркетинг</button></li>
+          </ul>
+          <ul class="projects list">
+            <li>
+              <img src="./images/pr_1.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Технокряк</h2>
+                <p class="projects-desc">Веб-сайт</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_2.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                <p class="projects-desc">Дизайн</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_3.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Ресторан Seafood</h2>
+                <p class="projects-desc">Додаток</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_4.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Проєкт Prime</h2>
+                <p class="projects-desc">Маркетинг</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_5.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Проєкт Boxes</h2>
+                <p class="projects-desc">Додаток</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_6.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Inspiration has no Borders</h2>
+                <p class="projects-desc">Веб-сайт</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_7.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Видання Limited Edition</h2>
+                <p class="projects-desc">Дизайн</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_8.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Проєкт LAB</h2>
+                <p class="projects-desc">Маркетинг</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/pr_9.jpg" alt="Приклад виповненої роботи" width="370" />
+              <div class="projects-border">
+                <h2 class="projects-title">Growing Business</h2>
+                <p class="projects-desc">Додаток</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Футлер -->
